# jcode

./: .gitignore  Cargo.toml  OAUTH.md  README.md  clippy.toml  deny.toml
crates/jcode-azure-auth/: Cargo.toml
crates/jcode-base/: Cargo.toml
crates/jcode-base/src/: background.rs  browser.rs  bus.rs  cache_invalidation.rs  compaction.rs  compaction_tests.rs  config.rs  config_tests.rs  embedding.rs  embedding_backend.rs  gateway.rs  gateway_tests.rs  gmail.rs  hooks.rs  import.rs  import_tests.rs  lib.rs  live_tests.rs  memory.rs  memory_agent.rs  memory_agent_tests.rs  memory_log.rs  memory_rerank.rs  memory_tests.rs  message.rs  model_pricing.rs  platform.rs  power_inhibit.rs  process_memory.rs  prompt.rs  prompt_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  runtime_memory_log.rs  runtime_memory_log_tests.rs  session.rs  session_metrics.rs  sidecar.rs  skill.rs  sponsors.rs  (+7 more)
crates/jcode-base/src/auth/: claude.rs  claude_tests.rs  copilot.rs  cursor.rs  doctor.rs  external.rs  external_tests.rs  gemini.rs  lifecycle.rs  mod.rs  oauth.rs
crates/jcode-base/src/background/: model.rs  tests.rs
crates/jcode-base/src/config/: config_file.rs  default_file.rs  display_summary.rs  env_overrides.rs
crates/jcode-base/src/mcp/: client.rs  manager.rs  pool.rs  protocol.rs  protocol_tests.rs  schema_cache_tests.rs
crates/jcode-base/src/memory/: pending.rs
crates/jcode-base/src/prompt/: swarm_prompt.md  system_prompt.md
crates/jcode-base/src/protocol/: notifications.rs
crates/jcode-base/src/provider/: accessors.rs  anthropic.rs  anthropic_tests.rs  antigravity.rs  catalog_routes.rs  claude.rs  copilot.rs  cursor.rs  external.rs  gemini.rs  image_clamp.rs  mod.rs  model_catalog_service.rs  models.rs  models_catalog.rs  openai.rs  openai_request.rs  openai_stream_runtime.rs  openrouter.rs  openrouter_tests.rs  pricing.rs  registry.rs  routing.rs  selection.rs  startup.rs  tests.rs
crates/jcode-base/src/session/: classify.rs  crash.rs  journal.rs  maintenance.rs  persistence.rs  render.rs  task_state.rs
crates/jcode-base/src/session_tests/: cases.rs
crates/jcode-base/src/sponsors/: provenance.rs
crates/jcode-base/src/usage/: accessors.rs  model.rs  provider_fetch.rs
crates/jcode-base/tests/: claude_import_integration.rs  launch_hotkeys_roundtrip.rs
crates/jcode-build-meta/: Cargo.toml
crates/jcode-build-meta/src/: lib.rs
crates/jcode-build-support/: Cargo.toml
crates/jcode-build-support/src/: lib.rs  paths.rs  tests.rs
crates/jcode-desktop/: Cargo.toml
crates/jcode-desktop/src/: canvas.rs  desktop_benchmark.rs  desktop_benchmarks_run.rs  desktop_benchmarks_scroll.rs  desktop_benchmarks_transcript.rs  desktop_branding.rs  desktop_capture.rs  desktop_clipboard.rs  desktop_events_glue.rs  desktop_gallery.rs  desktop_issue_cache.rs  desktop_jobs.rs  desktop_profiling.rs  desktop_reload.rs  desktop_scroll.rs  desktop_tasks.rs  desktop_worker_host.rs  desktop_worker_process.rs  hero_mask.rs  main.rs  main_tests.rs  render_helpers.rs  session_data.rs  single_session.rs  single_session_render.rs  state_space_tests.rs  streaming_text_style.rs  workspace.rs  workspace_vertices.rs
crates/jcode-desktop/src/session_launch/: server_io.rs
crates/jcode-embedding/: Cargo.toml
crates/jcode-embedding/src/: lib.rs
crates/jcode-embedding/tests/: embed_latency_probe.rs
crates/jcode-import-core/: Cargo.toml
crates/jcode-import-core/src/: lib.rs  repo_ranking.rs
crates/jcode-import-core/tests/: claude_adversarial.rs
crates/jcode-logging/: Cargo.toml
crates/jcode-logging/src/: lib.rs
crates/jcode-notify-email/: Cargo.toml
crates/jcode-productivity-core/: Cargo.toml
crates/jcode-protocol/: Cargo.toml
crates/jcode-protocol/src/: comm_format.rs  lib.rs  notifications.rs  protocol_tests.rs  wire.rs
crates/jcode-provider-anthropic/: Cargo.toml
crates/jcode-provider-anthropic-runtime/: Cargo.toml
crates/jcode-provider-anthropic-runtime/src/: anthropic_tests.rs  lib.rs
crates/jcode-provider-anthropic/src/: lib.rs
crates/jcode-provider-antigravity/: Cargo.toml
crates/jcode-provider-antigravity-runtime/: Cargo.toml
crates/jcode-provider-antigravity-runtime/src/: antigravity_tests.rs  lib.rs
crates/jcode-provider-bedrock/: Cargo.toml
crates/jcode-provider-bedrock/src/: lib.rs
crates/jcode-provider-copilot-runtime/: Cargo.toml
crates/jcode-provider-copilot-runtime/src/: copilot_tests.rs  lib.rs
crates/jcode-provider-core/: Cargo.toml
crates/jcode-provider-core/src/: anthropic.rs  attempt_tracker.rs  fallback_pick.rs  fingerprint.rs  lib.rs  models.rs  openai_schema.rs  pricing.rs  selection.rs  transport.rs
crates/jcode-provider-doctor/: Cargo.toml
crates/jcode-provider-doctor/src/: lib.rs  lifecycle_driver.rs  live_provider_probes.rs  provider_e2e.rs
crates/jcode-provider-env/: Cargo.toml
crates/jcode-provider-env/src/: lib.rs
crates/jcode-provider-openai/: Cargo.toml
crates/jcode-provider-openai-runtime/: Cargo.toml
crates/jcode-provider-openai-runtime/src/: lib.rs  openai_provider_impl.rs  openai_stream_runtime.rs  openai_tests.rs
crates/jcode-provider-openai/src/: stream.rs  websocket_health.rs
crates/jcode-provider-openrouter/: Cargo.toml
crates/jcode-provider-openrouter-runtime/: Cargo.toml
crates/jcode-provider-openrouter-runtime/src/: lib.rs  openrouter_provider_impl.rs  openrouter_sse_stream.rs  openrouter_tests.rs
crates/jcode-provider-openrouter/src/: lib.rs  request.rs  stream.rs
crates/jcode-render-core/: Cargo.toml
crates/jcode-render-core/src/: markdown.rs
crates/jcode-session-types/: Cargo.toml
crates/jcode-session-types/src/: lib.rs
crates/jcode-setup-hints/: Cargo.toml
crates/jcode-setup-hints/src/: launch_hotkeys.rs  lib.rs  linux_env.rs  linux_niri.rs  macos_launcher.rs  macos_terminal.rs  setup_hints_tests.rs  windows_hotkeys.rs  windows_setup.rs
crates/jcode-storage/: Cargo.toml
crates/jcode-storage/src/: active_pids.rs  lib.rs
crates/jcode-telemetry-core/: Cargo.toml
crates/jcode-telemetry-core/src/: lib.rs  lifecycle.rs  state_support.rs  tests.rs
ios/: .gitignore
(+801 files in other folders)
