[package]
name = "jcode-embedding"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_embedding"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
tract-hir = "0.21"
tract-onnx = "0.21"
