[package]
name = "jcode-logging"
version = "0.1.0"
edition = "2024"
description = "File logging, structured events, and thread/task-local logging context for jcode"

[lib]
name = "jcode_logging"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["rt"] }
jcode-core = { path = "../jcode-core" }
jcode-storage = { path = "../jcode-storage" }

[lints]
workspace = true
